force-app/main/default/objects/Composition__c/Composition__c.object-meta.xml
<CustomObject>
	<label>Composição</label>
	<nameField>
		<label>Nome</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Composições</pluralLabel>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>