force-app/main/default/objects/Composition__c/fields/AdditionalFixedCost__c.field-meta.xml
<CustomField>
	<fullName>AdditionalFixedCost__c</fullName>
	<label>Custo Adicional Fixo</label>
	<precision>16</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>