force-app/main/default/objects/Composition__c/fields/Bdi__c.field-meta.xml
<CustomField>
	<fullName>Bdi__c</fullName>
	<label>BDI</label>
	<precision>16</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>