force-app/main/default/objects/Composition__c/fields/ByIntegration__c.field-meta.xml
<CustomField>
	<fullName>ByIntegration__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Criado por Integração</label>
	<type>Checkbox</type>
</CustomField>