force-app/main/default/objects/Composition__c/fields/Coupling__c.field-meta.xml
<CustomField>
	<fullName>Coupling__c</fullName>
	<label>Acoplamento</label>
	<precision>16</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>