force-app/main/default/objects/Composition__c/fields/Direct__c.field-meta.xml
<CustomField>
	<fullName>Direct__c</fullName>
	<label>Direct</label>
	<precision>16</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>