force-app/main/default/objects/Composition__c/fields/ExternalId__c.field-meta.xml
<CustomField>
	<fullName>ExternalId__c</fullName>
	<externalId>true</externalId>
	<label>ID Externo</label>
	<length>80</length>
	<type>Text</type>
	<unique>true</unique>
</CustomField>