force-app/main/default/objects/Composition__c/fields/FinancialCostWeg__c.field-meta.xml
<CustomField>
	<fullName>FinancialCostWeg__c</fullName>
	<label>Custo Financeiro WEG</label>
	<precision>16</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>