force-app/main/default/objects/Composition__c/fields/Installation__c.field-meta.xml
<CustomField>
	<fullName>Installation__c</fullName>
	<label>R$ Instalação</label>
	<precision>16</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>