force-app/main/default/objects/Composition__c/fields/Nemi__c.field-meta.xml
<CustomField>
	<fullName>Nemi__c</fullName>
	<label>NEMI</label>
	<length>80</length>
	<type>Text</type>
</CustomField>