force-app/main/default/objects/Composition__c/fields/Network3750__c.field-meta.xml
<CustomField>
	<fullName>Network3750__c</fullName>
	<label>Rede 37,50%</label>
	<precision>16</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>