force-app/main/default/objects/Composition__c/fields/Opportunity__c.field-meta.xml
<CustomField>
	<fullName>Opportunity__c</fullName>
	<label>Oportunidade</label>
	<referenceTo>Opportunity</referenceTo>
	<relationshipLabel>Composições</relationshipLabel>
	<relationshipName>Compositions</relationshipName>
	<relationshipOrder>0</relationshipOrder>
	<type>MasterDetail</type>
</CustomField>