force-app/main/default/objects/Composition__c/fields/Points__c.field-meta.xml
<CustomField>
	<fullName>Points__c</fullName>
	<label>Pontos</label>
	<precision>16</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>