force-app/main/default/objects/Composition__c/fields/TotalProductValue__c.field-meta.xml
<CustomField>
	<fullName>TotalProductValue__c</fullName>
	<label>R$ Valor Total Produtos</label>
	<precision>16</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>